# vcpkg-baseline-extractor

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
baseline/: CMakeLists.txt
baseline/src/: main.cpp
res/: config.cmake  config.h.in
